# mason-registry-api

./: .gitignore  .vercelignore  Cargo.toml  LICENSE  README.md  renovate.json5  vercel.json
.github/workflows/: schema-tests.yaml  tests.yaml
api/: Cargo.toml  latest-tag.rs  main.rs
api/crate/[crate]/versions/: [version].rs  all.rs  latest.rs
api/github/[owner]/[name]/releases/: [release].rs  all.rs  latest.rs
api/github/[owner]/[name]/tags/: [tag].rs  all.rs  latest.rs
api/golang/[package]/versions/: all.rs
api/mason/: sponsors.rs
api/mason/renovate/: badge.rs
api/npm/[package]/: latest-version.rs
api/npm/[scope]/[package]/versions/: [version].rs  all.rs  latest.rs
api/openvsx/[namespace]/[extension]/versions/: all.rs  latest.rs
api/packagist/[vendor]/[package]/versions/: [version].rs  all.rs  latest.rs
api/pypi/[package]/versions/: [version].rs  all.rs  latest.rs
api/repo/[owner]/[name]/: latest-release.rs  latest-tag.rs
api/repo/[owner]/[name]/releases/: [release].rs  all.rs  latest.rs
api/repo/[owner]/[name]/tags/: [tag].rs  all.rs  latest.rs
api/rubygems/[gem]/versions/: [version].rs  all.rs  latest.rs
api/src/: api.rs  errors.rs  lib.rs
api/src/crates/: manager.rs  mod.rs
api/src/github/: api.rs  errors.rs  manager.rs  mod.rs
api/src/github/client/: mod.rs  response.rs  spec.rs
api/src/github/client/graphql/: latest_tag.rs  mod.rs  sponsors.rs  tags.rs
api/src/github/client/queries/: latest_tag.rs  mod.rs
api/src/golang/: manager.rs
api/src/golang/client/: mod.rs
api/src/http/: client.rs
api/src/npm/: errors.rs  manager.rs  mod.rs
api/src/npm/client/: mod.rs  spec.rs
api/src/packagist/: errors.rs  mod.rs
api/src/packagist/client/: mod.rs  spec.rs
api/src/pypi/: errors.rs  manager.rs  mod.rs
api/src/pypi/client/: mod.rs  spec.rs
api/src/rubygems/: manager.rs
api/src/rubygems/client/: mod.rs
schemas/: badge.json
schemas/errors/: not_found.json
schemas/mason/: sponsors.schema.json
schemas/repo/releases/: release.json
schemas/repo/tags/: tag.json
schemas/versions/: all.json  version.json
src/: errors.rs  lib.rs  vercel.rs
src/badges/: mod.rs
src/crates/: api.rs  errors.rs
src/github/: api.rs  errors.rs  manager.rs  mod.rs
src/github/client/: mod.rs  spec.rs
src/github/client/graphql/: mod.rs  tags.rs
src/golang/: errors.rs  manager.rs  mod.rs
src/npm/: errors.rs  mod.rs
src/npm/client/: mod.rs
src/openvsx/: api.rs  errors.rs  manager.rs  mod.rs
src/openvsx/client/: mod.rs  spec.rs
src/packagist/: api.rs  errors.rs  manager.rs
src/packagist/client/: mod.rs
src/pypi/: errors.rs
src/pypi/client/: spec.rs
src/renovate/: errors.rs  manager.rs  mod.rs
src/renovate/client/: mod.rs  spec.rs
src/rubygems/: api.rs  errors.rs  mod.rs
src/rubygems/client/: mod.rs  spec.rs
tests/: validate-schema.sh
