[package]
name = "mason-registry-api"
version = "1.0.0"
authors = ["William Boman <william@redwill.se>"]
edition = "2021"

[dependencies]
chrono = "0.4.26"
crates_io_api = "0.8.1"
http = "0.2.9"
parse_link_header = "0.3.3"
reqwest = { version = "0.11.18", features = ["blocking", "json"] }
semver = "1.0.17"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
thiserror = "1.0.40"
tokio = { version = "1.28.2", features = ["macros"] }
tracing = { version = "0.1.38", features = ["log"]}
tracing-subscriber = { version = "0.3.17", default-features = false, features = ["fmt"] }
url = "2.4.0"
vercel_runtime = "1.0.1"

[lib]
path = "src/lib.rs"

[[bin]]
name = "main"
path = "api/main.rs"
