[package]
name = "mason-registry-api"
version = "1.0.0"
authors = ["William Boman <william@redwill.se>"]
edition = "2021"

[dependencies]
chrono = "0.4.31"
crates_io_api = "0.8.1"
http = "0.2.9"
parse_link_header = "0.3.3"
reqwest = { version = "0.11.22", features = ["blocking", "json"] }
semver = "1.0.20"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
thiserror = "1.0.49"
tokio = { version = "1.33.0", features = ["macros"] }
tracing = { version = "0.1.39", features = ["log"]}
tracing-subscriber = { version = "0.3.17", default-features = false, features = ["fmt"] }
url = "2.4.1"
vercel_runtime = "1.1.0"

[lib]
path = "src/lib.rs"

[[bin]]
name = "crate-versions-all"
path = "api/crate/[crate]/versions/all.rs"

[[bin]]
name = "crate-versions-version"
path = "api/crate/[crate]/versions/[version].rs"

[[bin]]
name = "crate-versions-latest"
path = "api/crate/[crate]/versions/latest.rs"

[[bin]]
name = "github-releases-latest"
path = "api/github/[owner]/[name]/releases/latest.rs"

[[bin]]
name = "github-releases-all"
path = "api/github/[owner]/[name]/releases/all.rs"

[[bin]]
name = "github-releases-release"
path = "api/github/[owner]/[name]/releases/[release].rs"

[[bin]]
name = "github-tags-latest"
path = "api/github/[owner]/[name]/tags/latest.rs"

[[bin]]
name = "github-tags-all"
path = "api/github/[owner]/[name]/tags/all.rs"

[[bin]]
name = "github-tags-tag"
path = "api/github/[owner]/[name]/tags/[tag].rs"

[[bin]]
name = "npm-versions-latest"
path = "api/npm/[scope]/[package]/versions/latest.rs"

[[bin]]
name = "npm-versions-all"
path = "api/npm/[scope]/[package]/versions/all.rs"

[[bin]]
name = "npm-versions-version"
path = "api/npm/[scope]/[package]/versions/[version].rs"

[[bin]]
name = "pypi-versions-latest"
path = "api/pypi/[package]/versions/latest.rs"

[[bin]]
name = "pypi-versions-all"
path = "api/pypi/[package]/versions/all.rs"

[[bin]]
name = "pypi-versions-version"
path = "api/pypi/[package]/versions/[version].rs"

[[bin]]
name = "rubygems-versions-latest"
path = "api/rubygems/[gem]/versions/latest.rs"

[[bin]]
name = "rubygems-versions-all"
path = "api/rubygems/[gem]/versions/all.rs"

[[bin]]
name = "rubygems-versions-version"
path = "api/rubygems/[gem]/versions/[version].rs"

[[bin]]
name = "packagist-versions-latest"
path = "api/packagist/[vendor]/[package]/versions/latest.rs"

[[bin]]
name = "packagist-versions-all"
path = "api/packagist/[vendor]/[package]/versions/all.rs"

[[bin]]
name = "packagist-versions-version"
path = "api/packagist/[vendor]/[package]/versions/[version].rs"

[[bin]]
name = "golang-versions-all"
path = "api/golang/[package]/versions/all.rs"

[[bin]]
name = "mason-sponsors"
path = "api/mason/sponsors.rs"

[[bin]]
name = "mason-renovate-badge"
path = "api/mason/renovate/badge.rs"
