[package]
name = "mason-registry-api"
version = "1.0.0"
authors = ["William Boman <william@redwill.se>"]
edition = "2021"

[dependencies]
chrono = "0.4.38"
crates_io_api = "0.11"
http = "1"
parse_link_header = "0.3.3"
reqwest = { version = "0.12", features = ["blocking", "json"] }
semver = "1.0.23"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
thiserror = "1.0.61"
tokio = { version = "1.38.0", features = ["macros"] }
tracing = { version = "0.1.40", features = ["log"]}
tracing-subscriber = { version = "0.3.18", default-features = false, features = ["fmt"] }
url = "2.5.1"
vercel_runtime = "1.1.4"

[lib]
path = "src/lib.rs"

[[bin]]
name = "main"
path = "api/main.rs"
