[package]
name = "mason-registry-api"
version = "1.0.0"
authors = ["William Boman <william@redwill.se>"]
edition = "2018"

[dependencies]
http = "0.1"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.3.1"
vercel_lambda = "*"

[[bin]]
name = "repo-latest-release"
path = "repo/[owner]/[name]/latest-release.rs"

[[bin]]
name = "repo-latest-tag"
path = "repo/[owner]/[name]/latest-tag.rs"

[[bin]]
name = "npm-latest-version"
path = "npm/[scope]/[package]/latest-version.rs"
