[package]
name = "mason-registry-api"
version = "1.0.0"
authors = ["William Boman <william@redwill.se>"]
edition = "2018"

[dependencies]
thiserror = "1.0"
http = "0.1"
parse_link_header = "0.3.2"
reqwest = { version = "0.11", features = ["blocking", "json"] }
semver = "1.0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.3.1"
vercel_lambda = "*"

[[bin]]
name = "repo-releases-latest"
path = "repo/[owner]/[name]/releases/latest.rs"

[[bin]]
name = "repo-releases-all"
path = "repo/[owner]/[name]/releases/all.rs"

[[bin]]
name = "repo-releases-release"
path = "repo/[owner]/[name]/releases/[release].rs"

[[bin]]
name = "repo-tags-latest"
path = "repo/[owner]/[name]/tags/latest.rs"

[[bin]]
name = "repo-tags-all"
path = "repo/[owner]/[name]/tags/all.rs"

[[bin]]
name = "repo-tags-tag"
path = "repo/[owner]/[name]/tags/[tag].rs"

[[bin]]
name = "npm-versions-latest"
path = "npm/[scope]/[package]/versions/latest.rs"

[[bin]]
name = "npm-versions-all"
path = "npm/[scope]/[package]/versions/all.rs"

[[bin]]
name = "npm-versions-version"
path = "npm/[scope]/[package]/versions/[version].rs"
